# cpprepos

ABAufgabe2/: ABAufgabe2.sln  ABAufgabe2.vcxproj  main.cpp
ABKlassen1/: ABKlassen1.sln  ABKlassen1.vcxproj  ABKlassen1.vcxproj.filters  Mutex.cpp  MutexGuard.cpp  main.cpp
ABOperatorenA1/: ABOperatorenA1.sln
ABOperatorenA1/ABOperatorenA1/: ABOperatorenA1.vcxproj  main.cpp
Datatypes/: Datatypes.sln
Datatypes/Datatypes/: Datatypes.vcxproj  main.cpp
FileStorage/: FileStorage.sln
FileStorage/FileStorage/: FileNode.h  FileStorage.h  FileStorage.vcxproj  FileStorage.vcxproj.filters  Person.h  main.cpp
FunctionalCpp/: FunctionalCpp.sln
FunctionalCpp/FunctionalCpp/: FunctionalCpp.vcxproj  main.cpp
Move/: Move.sln
Move/Move/: Move.vcxproj  image.h  main.cpp
Overload/: Overload.sln
Overload/Overload/: Fraction.cpp  Fraction.hpp  Fraktion.hpp  Overload.vcxproj  Overload.vcxproj.filters  main.cpp
Pointers/: Pointers.sln
Pointers/Pointers/: Pointers.vcxproj
Project1/: Project1.sln
Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters  main.cpp  math.cpp  math.h
Project2/: Project2.sln
Project2/Project2/: Project2.vcxproj  main.cpp
Project3/: Project3.sln
Project3/Project3/: Color.h  (+9 more)
Project4/: Project4.sln
Project5/: Project5.sln
Tmp/: Tmp.sln
Uebung1/: Readme.txt
Uebung3/src/: CMakeLists.txt
Uebung3/src/PostfixInterpreter/: GenericInterpreter.hpp  IntegerInterpreter.h
Uebung3/src/UnitTest/: UnitTest2.cpp  UnitTest4.cpp
Uebung3/src/UnitTest2/: UnitTest2.cpp  UnitTest4.cpp
Vererbung/: Vererbung.sln
temp/: program2.cpp
(+68 files in other folders)
